# ginormal

./: GIN.R  README.md  example.R  example.py  gin.py  gin_initial.py  setup.py
Python/src/ginormal/: __init__.py  main.py
R/R/: Gin.rdx
R_combined_package/: DESCRIPTION  NAMESPACE
R_combined_package/R/: F0gin.R  dgin.R  dgin1.R  dtgin.R  dvla.R  mshift.R  pbdam.R  pbdv_r.R  rgin.R  rtgin.R
R_combined_package/man/: F0gin.Rd  dgin.Rd  dtgin.Rd  mshift.Rd  pbdam.Rd  pbdv_r.Rd  rtgin.Rd  vvla.Rd
R_combined_package/src/: fortfuncs.mod  init.c
R_fortran_package/: .Rbuildignore  DESCRIPTION  NAMESPACE
R_fortran_package/R/: F0gin.R  dgin.R  dgin1.R  dtgin.R  dvla.R  mshift.R  pbdv_r.R  rgin.R  rtgin.R  vvla.R
R_fortran_package/man/: dgin.Rd  dtgin.Rd  rgin.Rd  rtgin.Rd
R_fortran_package/src/: fortfuncsf.f90
R_package/: .Rbuildignore  DESCRIPTION  README.md  example_new.R
R_package/R/: F0gin.R  Gin.rdb  dgin.R  dgin1.R  dtgin.R  mshift.R  pbdam.R  rgin.R  rtgin.R  rtgin1.R  vvla.R
R_package/man/: F0gin.Rd  dgin.Rd  dgin1.Rd  dtgin.Rd  dvsa.Rd  pbdv.Rd  rgin.Rd  rtgin.Rd  rtgin1.Rd
R_package/src/: fortfuncs.mod
R_package_fortran/: DESCRIPTION  NAMESPACE  example_new.R
R_package_fortran/R/: F0gin.R  dgin.R  dgin1.R  dtgin.R  dvsa.R  pbdam.R  pbdv.R  pbdv_r.R  rgin.R  rtgin.R  rtgin1.R
R_package_fortran/man/: dgin.Rd  dgin1.Rd  dtgin.Rd  dvla.Rd  mshift.Rd  pbdam.Rd  pbdv_r.Rd  rgin.Rd  rtgin.Rd  rtgin1.Rd
R_package_fortran/src/: fortfuncsf.f90  init.c
R_translation_package/: DESCRIPTION  NAMESPACE
R_translation_package/R/: dgin.R  dgin1.R  mshift.R  pbdam.R  pbdv.R  rtgin.R  rtgin1.R
ginormal/: DESCRIPTION
ginormal/R/: F0gin.R  dgin.R  dgin1.R  dtgin.R  dvsa.R  mshift.R  pbdam.R  pbdv_r.R  rgin.R  rtgin.R  rtgin1.R
ginormal/main/: dgin.Rd  rgin.Rd  rtgin.Rd
ginormal/man/: dtgin.Rd
ginormal/src/: init.c
python_package/: README.md  pyproject.toml
python_package/src/ginormal/: __init__.py  dgin.py  dtgin.py  example.py  main.py  rgin.py  rtgin.py
python_package/src/ginormal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_package/src/ginormal/utils/: F0gin.py  mshift.py  rtgin1.py
python_package_files/: pyproject.toml
python_package_files/example/: example.py
python_package_files/gin.dist.egg-info/: PKG-INFO
python_package_files/ginormal.egg-info/: PKG-INFO
