# Build system for the package
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Package metadata
[project]
name = "ginormal"
version = "0.0.11"
description = "Generalized Inverse Normal distribution density and generation"
dynamic = ["readme"]
authors = [
  { name = "Santiago Montoya-Blandón", email = "Santiago.Montoya-Blandon@glasgow.ac.uk" },
  { name = "Cheng Ding", email = "cheng.ding.emory@gmail.com"},
  { name = "Juan Estrada", email = "jjestra@emory.edu"},
  { name = "Zhilang Xia", email = "zhilang.xia@glasgow.ac.uk"}
]
maintainers = [
  { name = "Santiago Montoya-Blandón", email = "Santiago.Montoya-Blandon@glasgow.ac.uk" }
]
dependencies = ["numpy", "scipy", "cardano_method"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8", # "Programming Language" represents the top-level category, "Python" represents the second-level category, and "3.8" represents the third-level category.
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",    # The software package is not dependent on any specific operating system
]
keywords = ["statistics", "distribution", "generalized inverse normal", "random variable generation"]

[project.urls]
"Homepage" = "https://github.com/smonto2/ginormal"
"Bug tracking" = "https://github.com/smonto2/ginormal/issues"

[tool.setuptools.dynamic]
version = {attr = "ginormal.VERSION"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools]
package-dir = {"" = "src"}
